<resources>
    <string name="app_name">Room</string>
    <string name="editName">Имя</string>
    <string name="editEmail">E-mail</string>
    <string name="buttonAdd">Добавить</string>
    <string name="buttonRead">Прочитать</string>
    <string name="buttonClear">Очистить</string>
    <string name="textVersion">Версия %1$s.%2$d</string>
    <string name="buttonUpdate">Изменить</string>
</resources>
